--- a/src/OrderService.Application/OrderService.Application.csproj
+++ b/src/OrderService.Application/OrderService.Application.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Shopi.OrderService.Integrations\Shopi.OrderService.Integrations.csproj" />
       <ProjectReference Include="..\OrderService.Domain\OrderService.Domain.csproj" />
       <ProjectReference Include="..\OrderService.Infrastructure\OrderService.Infrastructure.csproj" />
     </ItemGroup>
