--- a/src/OrderService.Infrastructure/OrderService.Infrastructure.csproj
+++ b/src/OrderService.Infrastructure/OrderService.Infrastructure.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.2" />
+      <PackageReference Include="RestSharp" Version="108.0.2-alpha.0.1" />
       <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
     </ItemGroup>
 
