--- a/src/OrderService.Application/OrderService.Application.csproj
+++ b/src/OrderService.Application/OrderService.Application.csproj
@@ -19,4 +19,8 @@
       <ProjectReference Include="..\OrderService.Infrastructure\OrderService.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Business\Users\Queris" />
+    </ItemGroup>
+
 </Project>
